# mobkp-instances

./: CITATION.cff  CMakeLists.txt  README.md  validate.py
apps/: instances.cpp  mobkp_instances.cpp
include/: filelock.hpp  parameters.hpp  parser.hpp  solver.hpp
instances/: README.md
instances/neg_corr/2D/: 100_1_-0.250000.in  100_1_-0.800000.in  100_2_-0.500000.in  100_2_-0.800000.in  100_3_-0.100000.in  100_3_-0.250000.in  100_4_-0.100000.in  100_4_-0.250000.in  100_4_-0.500000.in  100_5_-0.100000.in  100_5_-0.500000.in  100_5_-0.800000.in  100_6_-0.250000.in  100_7_-0.500000.in  100_8_-0.100000.in  100_8_-0.250000.in  100_9_-0.100000.in  100_9_-0.250000.in  200_10_-0.100000.in  200_10_-0.500000.in  200_10_-0.800000.in  200_1_-0.100000.in  200_1_-0.500000.in  200_2_-0.250000.in  200_3_-0.100000.in  200_3_-0.500000.in  200_4_-0.100000.in  200_4_-0.250000.in  200_4_-0.500000.in  200_5_-0.100000.in  200_5_-0.250000.in  200_5_-0.500000.in  200_5_-0.800000.in  200_6_-0.100000.in  200_6_-0.800000.in  200_7_-0.100000.in  200_7_-0.250000.in  200_8_-0.100000.in  200_9_-0.100000.in  200_9_-0.250000.in  (+25 more)
instances/neg_corr/3D/: 100_10_-0.450000.in  100_1_-0.450000.in  100_2_-0.450000.in  100_3_-0.450000.in  100_4_-0.450000.in  100_6_-0.450000.in  100_8_-0.450000.in  100_9_-0.450000.in  20_10_-0.100000.in  20_10_-0.250000.in  20_10_-0.450000.in  20_1_-0.100000.in  20_1_-0.250000.in  20_2_-0.100000.in  20_2_-0.250000.in  20_2_-0.450000.in  20_3_-0.100000.in  20_3_-0.250000.in  20_3_-0.450000.in  20_4_-0.450000.in  20_5_-0.450000.in  20_6_-0.250000.in  20_6_-0.450000.in  20_7_-0.250000.in  20_7_-0.450000.in  20_8_-0.100000.in  20_8_-0.250000.in  20_8_-0.450000.in  20_9_-0.250000.in  25_10_-0.100000.in  25_10_-0.250000.in  25_1_-0.450000.in  25_2_-0.100000.in  25_3_-0.100000.in  25_4_-0.100000.in  25_4_-0.250000.in  25_5_-0.100000.in  25_5_-0.250000.in  25_5_-0.450000.in  25_6_-0.100000.in  (+120 more)
instances/negative/2D/: 100_10_-0.100000.in  100_10_-0.250000.in  100_10_-0.500000.in  100_10_-0.800000.in  100_1_-0.100000.in  100_1_-0.500000.in  100_2_-0.100000.in  100_2_-0.250000.in  100_3_-0.500000.in  100_3_-0.800000.in  100_4_-0.100000.in  100_4_-0.800000.in  100_5_-0.250000.in  100_5_-0.800000.in  100_6_-0.100000.in  100_6_-0.500000.in  100_6_-0.800000.in  100_7_-0.100000.in  100_7_-0.250000.in  100_7_-0.800000.in  100_8_-0.500000.in  100_8_-0.800000.in  100_9_-0.500000.in  100_9_-0.800000.in  200_10_-0.250000.in  200_10_-0.500000.in  200_10_-0.800000.in  200_1_-0.100000.in  200_1_-0.250000.in  200_1_-0.500000.in  200_1_-0.800000.in  200_2_-0.100000.in  200_2_-0.250000.in  200_2_-0.500000.in  200_2_-0.800000.in  200_3_-0.100000.in  200_3_-0.250000.in  200_3_-0.500000.in  200_3_-0.800000.in  200_4_-0.100000.in  (+36 more)
instances/negative/3D/: 100_5_-0.450000.in  100_7_-0.450000.in  20_1_-0.450000.in  20_4_-0.100000.in  20_4_-0.250000.in  20_5_-0.100000.in  20_5_-0.250000.in  20_6_-0.100000.in  20_7_-0.100000.in  20_9_-0.100000.in  20_9_-0.450000.in  25_10_-0.450000.in  25_1_-0.100000.in  25_1_-0.250000.in  25_2_-0.250000.in  25_2_-0.450000.in  25_3_-0.250000.in  25_3_-0.450000.in  25_4_-0.450000.in  25_6_-0.450000.in  25_7_-0.100000.in  25_7_-0.250000.in  25_7_-0.450000.in  25_8_-0.250000.in  25_8_-0.450000.in  25_9_-0.450000.in  30_10_-0.100000.in  30_1_-0.100000.in  30_4_-0.100000.in  30_4_-0.450000.in  30_5_-0.250000.in  30_6_-0.250000.in  30_8_-0.100000.in  30_8_-0.250000.in  30_8_-0.450000.in  30_9_-0.250000.in  30_9_-0.450000.in  35_10_-0.450000.in  35_1_-0.100000.in  35_1_-0.250000.in  (+91 more)
instances/negative/4D/: 20_10_-0.300000.in  20_1_-0.300000.in  20_2_-0.300000.in  20_3_-0.300000.in  20_4_-0.300000.in  20_5_-0.300000.in  20_6_-0.300000.in  20_7_-0.300000.in  20_8_-0.300000.in  20_9_-0.300000.in  25_10_-0.300000.in  25_1_-0.300000.in  25_2_-0.300000.in  25_3_-0.300000.in  25_4_-0.300000.in  25_5_-0.300000.in  25_6_-0.300000.in  25_7_-0.300000.in  25_8_-0.300000.in  25_9_-0.300000.in  30_10_-0.300000.in  30_1_-0.300000.in  30_2_-0.300000.in  30_3_-0.300000.in  30_4_-0.300000.in  30_5_-0.300000.in  30_6_-0.300000.in  30_7_-0.300000.in  30_8_-0.300000.in  30_9_-0.300000.in  35_10_-0.300000.in  35_1_-0.300000.in  35_2_-0.300000.in  35_3_-0.300000.in  35_4_-0.300000.in  35_5_-0.300000.in  35_6_-0.300000.in  35_7_-0.300000.in  35_8_-0.300000.in  35_9_-0.300000.in  (+4 more)
instances/pos_corr/2D/: 100_10_0.250000.in  100_10_0.500000.in  100_10_0.800000.in  100_1_0.100000.in  100_1_0.250000.in  100_1_0.800000.in  100_2_0.100000.in  100_2_0.250000.in  100_2_0.500000.in  100_3_0.100000.in  100_3_0.250000.in  100_3_0.800000.in  100_4_0.250000.in  100_4_0.500000.in  100_4_0.800000.in  100_5_0.100000.in  100_5_0.250000.in  100_5_0.800000.in  100_6_0.100000.in  100_6_0.250000.in  100_6_0.800000.in  100_7_0.100000.in  100_7_0.250000.in  100_7_0.500000.in  100_8_0.100000.in  100_8_0.250000.in  100_8_0.800000.in  100_9_0.100000.in  100_9_0.250000.in  100_9_0.500000.in  200_10_0.500000.in  200_1_0.100000.in  200_1_0.500000.in  200_3_0.100000.in  200_3_0.250000.in  200_3_0.800000.in  200_4_0.100000.in  200_4_0.500000.in  200_5_0.100000.in  200_5_0.500000.in  (+48 more)
instances/pos_corr/3D/: 100_10_0.450000.in  100_1_0.100000.in  100_2_0.100000.in  100_2_0.250000.in  100_2_0.450000.in  100_3_0.450000.in  100_4_0.100000.in  100_4_0.250000.in  100_5_0.250000.in  100_5_0.450000.in  100_7_0.100000.in  100_7_0.250000.in  100_8_0.100000.in  (+214 more)
scripts/: gen_neg_corr.sh  gen_pos_corr.sh  gen_random.sh  generator.R  negative.sh
(+882 files in other folders)
